--- a/template/package.json
+++ b/template/package.json
@@ -13,8 +13,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
-    "express": "^4.16.3"<%= if (mongoose) {%>,
-    "mongoose": "^5.2.13"<%= } %>
+    "express": "^4.16.3"<% if (mongoose) {%>,
+    "mongoose": "^5.2.13"<% } %>
   },
   "devDependencies": {
     "husky": "^0.14.3",
