--- a/template/package.json
+++ b/template/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "template",
+  "name": "<%= moduleName %>",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
+  "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -13,8 +14,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
-    "express": "^4.16.3"<% if (mongoose) {%>,
-    "mongoose": "^5.2.13"<% } %>
+    "express": "^4.16.3"
   },
   "devDependencies": {
     "husky": "^0.14.3",
